pruebas_lectura_pdf

--- a/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
+++ b/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
@@ -2,21 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openai'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mchatbot\u001b[39;00m \u001b[39mimport\u001b[39;00m Chatbot\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m OpenAI\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcache\u001b[39;00m \u001b[39mimport\u001b[39;00m Cache\n",
-      "File \u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\softtek_llm\\chatbot.py:6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtime\u001b[39;00m \u001b[39mimport\u001b[39;00m perf_counter_ns\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Dict, List, Sequence\n\u001b[1;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcache\u001b[39;00m \u001b[39mimport\u001b[39;00m Cache\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexceptions\u001b[39;00m \u001b[39mimport\u001b[39;00m InvalidPrompt\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmemory\u001b[39;00m \u001b[39mimport\u001b[39;00m Memory, WindowMemory\n",
-      "File \u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\softtek_llm\\cache.py:6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Dict, Tuple\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39muuid\u001b[39;00m \u001b[39mimport\u001b[39;00m uuid1\n\u001b[1;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39membeddings\u001b[39;00m \u001b[39mimport\u001b[39;00m EmbeddingsModel\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mschemas\u001b[39;00m \u001b[39mimport\u001b[39;00m Message, Response, Vector\n\u001b[0;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvectorStores\u001b[39;00m \u001b[39mimport\u001b[39;00m VectorStore\n",
-      "File \u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\softtek_llm\\embeddings.py:4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mabc\u001b[39;00m \u001b[39mimport\u001b[39;00m ABC, abstractmethod\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping\u001b[39;00m \u001b[39mimport\u001b[39;00m Any, List, Literal\n\u001b[1;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenai\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtyping_extensions\u001b[39;00m \u001b[39mimport\u001b[39;00m override\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msofttek_llm\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m setup_azure\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'openai'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/Fridaplatform/SofttekLLMSDK.git\n",
+      "  Cloning https://github.com/Fridaplatform/SofttekLLMSDK.git to c:\\users\\joses\\appdata\\local\\temp\\pip-req-build-du6xzvqm\n",
+      "  Resolved https://github.com/Fridaplatform/SofttekLLMSDK.git to commit 0f11c8ed07889b9e13a360509e81b4703e03bc0f\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: aiohttp==3.8.5 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (3.8.5)\n",
+      "Requirement already satisfied: aiosignal==1.3.1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.3.1)\n",
+      "Requirement already satisfied: annotated-types==0.5.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (0.5.0)\n",
+      "Requirement already satisfied: async-timeout==4.0.3 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (4.0.3)\n",
+      "Requirement already satisfied: attrs==23.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (23.1.0)\n",
+      "Requirement already satisfied: certifi==2023.7.22 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2023.7.22)\n",
+      "Requirement already satisfied: charset-normalizer==3.2.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (3.2.0)\n",
+      "Requirement already satisfied: colorama==0.4.6 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (0.4.6)\n",
+      "Requirement already satisfied: dnspython==2.4.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.4.2)\n",
+      "Requirement already satisfied: et-xmlfile==1.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.1.0)\n",
+      "Requirement already satisfied: frozenlist==1.4.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.4.0)\n",
+      "Requirement already satisfied: idna==3.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (3.4)\n",
+      "Requirement already satisfied: loguru==0.7.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (0.7.2)\n",
+      "Requirement already satisfied: multidict==6.0.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (6.0.4)\n",
+      "Requirement already satisfied: numpy==1.25.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.25.2)\n",
+      "Requirement already satisfied: openai==0.28.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (0.28.0)\n",
+      "Requirement already satisfied: openpyxl==3.1.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (3.1.2)\n",
+      "Requirement already satisfied: pandas==2.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.1.0)\n",
+      "Requirement already satisfied: pandas-stubs==2.0.3.230814 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.0.3.230814)\n",
+      "Requirement already satisfied: pinecone-client==2.2.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.2.4)\n",
+      "Requirement already satisfied: pydantic==2.3.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.3.0)\n",
+      "Requirement already satisfied: pydantic-core==2.6.3 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.6.3)\n",
+      "Requirement already satisfied: python-dateutil==2.8.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.8.2)\n",
+      "Requirement already satisfied: python-dotenv==1.0.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.0.0)\n",
+      "Requirement already satisfied: pytz==2023.3.post1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2023.3.post1)\n",
+      "Requirement already satisfied: PyYAML==6.0.1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (6.0.1)\n",
+      "Requirement already satisfied: requests==2.31.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.31.0)\n",
+      "Requirement already satisfied: six==1.16.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.16.0)\n",
+      "Requirement already satisfied: tqdm==4.66.1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (4.66.1)\n",
+      "Requirement already satisfied: types-pytz==2023.3.0.1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2023.3.0.1)\n",
+      "Requirement already satisfied: typing-extensions==4.7.1 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (4.7.1)\n",
+      "Requirement already satisfied: tzdata==2023.3 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2023.3)\n",
+      "Requirement already satisfied: urllib3==2.0.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.0.4)\n",
+      "Requirement already satisfied: win32-setctime==1.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.1.0)\n",
+      "Requirement already satisfied: yarl==1.9.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.9.2)\n",
+      "Building wheels for collected packages: innovation-stk\n",
+      "  Building wheel for innovation-stk (pyproject.toml): started\n",
+      "  Building wheel for innovation-stk (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for innovation-stk: filename=innovation_stk-0.0.1-py3-none-any.whl size=16805 sha256=77ae256161574944ac50e5a2a22f5365960546c00ba7bf7fc9f8655a1e8a6d60\n",
+      "  Stored in directory: C:\\Users\\joses\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-271vzm8t\\wheels\\78\\86\\e5\\efbcba3dce51511d80b25a6055ab7ce49e15fe4a81b43d1b0c\n",
+      "Successfully built innovation-stk\n",
+      "Installing collected packages: innovation-stk\n",
+      "Successfully installed innovation-stk-0.0.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Fridaplatform/SofttekLLMSDK.git 'C:\\Users\\joses\\AppData\\Local\\Temp\\pip-req-build-du6xzvqm'\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install git+https://github.com/Fridaplatform/SofttekLLMSDK.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python311\\Lib\\site-packages\\pinecone\\index.py:4: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
      ]
     }
    ],
@@ -33,9 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "OPENAI_API_KEY not found in .env file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 3\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m OPENAI_API_KEY \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_KEY\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m OPENAI_API_KEY \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_KEY not found in .env file\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m OPENAI_API_BASE \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mgetenv(\u001b[39m\"\u001b[39m\u001b[39mOPENAI_API_BASE\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m OPENAI_API_BASE \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: OPENAI_API_KEY not found in .env file"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
@@ -115,20 +204,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Revision prompt: Considering this context:\n",
-      "\n",
-      "\n",
-      "Please review the prompt below and answer with \"yes\" if it adheres to the rules or \"no\" if it violates any of the rules.\n",
-      "Rules:\n",
-      "\t- DENY: ANYTHING about the Titanic. YOU CANNOT talk about the Titanic AT ALL.\n",
-      "\n",
-      "Prompt:\n",
-      "Hello! My name is Jeff.\n",
-      "Memory: [{'role': 'system', 'content': \"As a prompt reviser, your role is to determine whether the given prompt respects the rules provided below. You can only respond with 'yes' or 'no.' The rules are absolute, meaning that if any of them are not respected, the prompt is considered invalid.\"}, {'role': 'system', 'content': \"only respond with 'yes' or 'no'\"}, {'role': 'user', 'content': 'Considering this context:\\n\\n\\nPlease review the prompt below and answer with \"yes\" if it adheres to the rules or \"no\" if it violates any of the rules.\\nRules:\\n\\t- DENY: ANYTHING about the Titanic. YOU CANNOT talk about the Titanic AT ALL.\\n\\nPrompt:\\nHello! My name is Jeff.'}]\n",
-      "Memory: [{'role': 'system', 'content': 'You are a very helpful and polite chatbot'}, {'role': 'user', 'content': 'Hello! My name is Jeff.'}]\n"
+     "ename": "NameError",
+     "evalue": "name 'chatbot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m response \u001b[39m=\u001b[39m chatbot\u001b[39m.\u001b[39mchat(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mHello! My name is Jeff.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     print_cache_score\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X22sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     cache_kwargs\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mnamespace\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mchatbot-test\u001b[39m\u001b[39m\"\u001b[39m},\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'chatbot' is not defined"
      ]
     }
    ],
