--- a/Gabo.ipynb
+++ b/Gabo.ipynb
@@ -2,49 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El archivo '' no fue encontrado.\n",
-      "Resumen del contenido del PDF:\n",
-      "\n",
-      "\n",
-      "Este texto trata de la importancia de la creatividad. A menudo se piensa que la creatividad es una cualidad de los artistas o de los músicos, pero en realidad todos podemos ser creativos. La creatividad es importante porque nos ayuda a solucionar problemas y a ver las cosas de una manera nueva. A veces, la creatividad puede ser más importante que el conocimiento.\n",
-      "\n",
-      "This text is about the importance of creativity. It is often thought that creativity is a quality of artists or musicians, but everyone can\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (521934267.py, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    nombre_archivo_pdf = input(\"Por favor, ingresa el nombre del archivo PDF: \")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "import openai\n",
+    "#import openai\n",
     "import PyPDF2\n",
     "\n",
     "# Configura tu clave de API de OpenAI\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"6b25369971534252bbcee5e488ce59f1r\"\n",
     "\n",
     "# Solicitar al usuario el nombre del archivo PDF\n",
-    "nombre_archivo_pdf = input(\"Ingresa el nombre del archivo PDF: \")\n",
+    " nombre_archivo_pdf = input(\"Por favor, ingresa el nombre del archivo PDF: \")\n",
     "\n",
     "# Intentar abrir y leer el contenido del archivo PDF\n",
     "try:\n",
-    "    with open(nombre_archivo_pdf, \"rb\") as pdf_file:\n",
-    "        pdf_reader = PyPDF2.PdfReader (pdf_file)\n",
-    "        texto_a_resumir = \"\"\n",
-    "        for page_number in range(pdf_reader.numPages):\n",
-    "            page = pdf_reader.getPage(page_number)\n",
-    "            texto_a_resumir += page.extractText()\n",
+    "    pdf_file = open(\"pdfgg5.pdf\", \"rb\")\n",
+    "    pdf_reader = PyPDF2.PdfFileReader(pdf_file)\n",
+    "    texto_a_resumir = \"\"\n",
+    "    for page_number in range(pdf_reader.numPages):\n",
+    "        page = pdf_reader.getPage(page_number)\n",
+    "        texto_a_resumir += page.extractText()\n",
+    "    pdf_file.close()\n",
     "except FileNotFoundError:\n",
     "    print(f\"El archivo '{nombre_archivo_pdf}' no fue encontrado.\")\n",
     "    exit()\n",
