--- a/Gabo.ipynb
+++ b/Gabo.ipynb
@@ -2,37 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (521934267.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 8\u001b[1;36m\u001b[0m\n\u001b[1;33m    nombre_archivo_pdf = input(\"Por favor, ingresa el nombre del archivo PDF: \")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resumen del contenido del PDF:\n",
+      " OpenAI no proporciona una API específica para resumir contenido de archivos de texto, sino que está más enfocada en la generación de texto y en la respuesta a preguntas basadas en texto. Se puede utilizar bibliotecas y técnicas de procesamiento de lenguaje natural (NLTK) para realizar el resumen.\n"
      ]
     }
    ],
    "source": [
-    "#import openai\n",
-    "import PyPDF2\n",
+    "import openai\n",
+    "from PyPDF2 import PdfReader\n",
     "\n",
     "# Configura tu clave de API de OpenAI\n",
-    "openai.api_key = \"6b25369971534252bbcee5e488ce59f1r\"\n",
+    "openai.api_key = \"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\"\n",
     "\n",
-    "# Solicitar al usuario el nombre del archivo PDF\n",
-    " nombre_archivo_pdf = input(\"Por favor, ingresa el nombre del archivo PDF: \")\n",
+    "# Especifica el nombre del archivo PDF directamente\n",
+    "nombre_archivo_pdf = \"pdfgg5.pdf\"  # Reemplaza con el nombre de tu archivo PDF\n",
     "\n",
     "# Intentar abrir y leer el contenido del archivo PDF\n",
     "try:\n",
-    "    pdf_file = open(\"pdfgg5.pdf\", \"rb\")\n",
-    "    pdf_reader = PyPDF2.PdfFileReader(pdf_file)\n",
+    "    pdf_reader = PdfReader(nombre_archivo_pdf)\n",
     "    texto_a_resumir = \"\"\n",
-    "    for page_number in range(pdf_reader.numPages):\n",
-    "        page = pdf_reader.getPage(page_number)\n",
-    "        texto_a_resumir += page.extractText()\n",
-    "    pdf_file.close()\n",
+    "    for page in pdf_reader.pages:\n",
+    "        texto_a_resumir += page.extract_text()\n",
     "except FileNotFoundError:\n",
     "    print(f\"El archivo '{nombre_archivo_pdf}' no fue encontrado.\")\n",
     "    exit()\n",
@@ -46,7 +43,8 @@
     "\n",
     "# Imprimir el resumen generado\n",
     "print(\"Resumen del contenido del PDF:\")\n",
-    "print(response.choices[0].text)\n"
+    "print(response.choices[0].text)\n",
+    "\n"
    ]
   }
  ],
