--- a/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
+++ b/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting git+https://github.com/Fridaplatform/SofttekLLMSDK.git\n",
-      "  Cloning https://github.com/Fridaplatform/SofttekLLMSDK.git to c:\\users\\joses\\appdata\\local\\temp\\pip-req-build-uy6gir7z\n",
+      "Note: you may need to restart the kernel to use updated packages.Collecting git+https://github.com/Fridaplatform/SofttekLLMSDK.git\n",
+      "  Cloning https://github.com/Fridaplatform/SofttekLLMSDK.git to c:\\users\\joses\\appdata\\local\\temp\\pip-req-build-g6no52mk\n",
       "  Resolved https://github.com/Fridaplatform/SofttekLLMSDK.git to commit 0f11c8ed07889b9e13a360509e81b4703e03bc0f\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
@@ -53,14 +53,14 @@
       "Requirement already satisfied: urllib3==2.0.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.0.4)\n",
       "Requirement already satisfied: win32-setctime==1.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.1.0)\n",
       "Requirement already satisfied: yarl==1.9.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.9.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Fridaplatform/SofttekLLMSDK.git 'C:\\Users\\joses\\AppData\\Local\\Temp\\pip-req-build-uy6gir7z'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Fridaplatform/SofttekLLMSDK.git 'C:\\Users\\joses\\AppData\\Local\\Temp\\pip-req-build-g6no52mk'\n"
      ]
     }
    ],
@@ -173,17 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cache score: 1.00000012\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = chatbot.chat(\n",
     "    \"Hello! My name is Jeff.\",\n",
@@ -199,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "Response(message=Message(role='assistant', content=\"Hello Jeff! It's a pleasure to meet you. How can I assist you today?\"), created=1695523908, latency=880, from_cache=False, model='gpt-35-turbo-16k', usage=Usage(prompt_tokens=27, completion_tokens=18, total_tokens=45), additional_kwargs={})"
+       "Response(message=Message(role='assistant', content=\"Hello Jeff! It's very nice to meet you. How can I assist you today?\"), created=1695525402, latency=741, from_cache=False, model='gpt-35-turbo-16k', usage=Usage(prompt_tokens=27, completion_tokens=18, total_tokens=45), additional_kwargs={})"
       ]
      },
      "execution_count": 6,
@@ -213,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache score: 0.827462614\n"
+     ]
+    }
+   ],
    "source": [
     "response = chatbot.chat(\n",
     "    \"What is my name?\",\n",
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Response(message=Message(role='assistant', content=\"I apologize if there is any confusion, but I don't have access to personal information unless you provide it to me.\"), created=1695524571, latency=1586, from_cache=False, model='gpt-35-turbo-16k', usage=Usage(prompt_tokens=188, completion_tokens=24, total_tokens=212), additional_kwargs={})"
+       "Response(message=Message(role='assistant', content='Your name is Jeff. You mentioned it in your previous message. Is there anything specific you would like to discuss or ask about?'), created=1695525404, latency=785, from_cache=False, model='gpt-35-turbo-16k', usage=Usage(prompt_tokens=58, completion_tokens=26, total_tokens=84), additional_kwargs={})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,18 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'chatbot' is not defined",
+     "ename": "InvalidPrompt",
+     "evalue": "The prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m response \u001b[39m=\u001b[39m chatbot\u001b[39m.\u001b[39mchat(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mWhen did the Titanic sink?\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X26sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     print_cache_score\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X26sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'chatbot' is not defined"
+      "\u001b[1;31mInvalidPrompt\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m response \u001b[39m=\u001b[39m chatbot\u001b[39m.\u001b[39;49mchat(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mWhen did the Titanic sink?\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     print_cache_score\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\softtek_llm\\chatbot.py:207\u001b[0m, in \u001b[0;36mChatbot.chat\u001b[1;34m(self, prompt, print_cache_score, cache_kwargs)\u001b[0m\n\u001b[0;32m    199\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnon_valid_response:\n\u001b[0;32m    200\u001b[0m             \u001b[39mreturn\u001b[39;00m Response(\n\u001b[0;32m    201\u001b[0m                 message\u001b[39m=\u001b[39mMessage(role\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msystem\u001b[39m\u001b[39m\"\u001b[39m, content\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnon_valid_response),\n\u001b[0;32m    202\u001b[0m                 created\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m(datetime\u001b[39m.\u001b[39mutcnow()\u001b[39m.\u001b[39mtimestamp()),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    205\u001b[0m                 model\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mreviser\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    206\u001b[0m             )\n\u001b[1;32m--> 207\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidPrompt(\n\u001b[0;32m    208\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    211\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmemory\u001b[39m.\u001b[39madd_message(role\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m, content\u001b[39m=\u001b[39mprompt)\n\u001b[0;32m    212\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcache:\n",
+      "\u001b[1;31mInvalidPrompt\u001b[0m: The prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts."
      ]
     }
    ],
