--- a/Gabo.ipynb
+++ b/Gabo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Resumen del contenido del PDF:\n",
-      " OpenAI no proporciona una API específica para resumir contenido de archivos de texto, sino que está más enfocada en la generación de texto y en la respuesta a preguntas basadas en texto. Se puede utilizar bibliotecas y técnicas de procesamiento de lenguaje natural (NLTK) para realizar el resumen.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openai\n",
     "from PyPDF2 import PdfReader\n",
@@ -35,11 +26,7 @@
     "    exit()\n",
     "\n",
     "# Utilizar la API de OpenAI para generar un resumen\n",
-    "response = openai.Completion.create(\n",
-    "    engine=\"text-davinci-002\",\n",
-    "    prompt=f\"Resumen del siguiente texto:\\n{texto_a_resumir}\\n\\nResumen:\",\n",
-    "    max_tokens=150,\n",
-    ")\n",
+    "response = openai.Completion.create(engine=\"text-davinci-002\", prompt=f\"Resumen del siguiente texto:\\n{texto_a_resumir}\\n\\nResumen:\", max_tokens=150,)\n",
     "\n",
     "# Imprimir el resumen generado\n",
     "print(\"Resumen del contenido del PDF:\")\n",
