--- a/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
+++ b/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.Collecting git+https://github.com/Fridaplatform/SofttekLLMSDK.git\n",
-      "  Cloning https://github.com/Fridaplatform/SofttekLLMSDK.git to c:\\users\\joses\\appdata\\local\\temp\\pip-req-build-g6no52mk\n",
+      "Collecting git+https://github.com/Fridaplatform/SofttekLLMSDK.git\n",
+      "  Cloning https://github.com/Fridaplatform/SofttekLLMSDK.git to c:\\users\\joses\\appdata\\local\\temp\\pip-req-build-0dprhy6c\n",
       "  Resolved https://github.com/Fridaplatform/SofttekLLMSDK.git to commit 0f11c8ed07889b9e13a360509e81b4703e03bc0f\n",
       "  Installing build dependencies: started\n",
       "  Installing build dependencies: finished with status 'done'\n",
@@ -53,14 +53,14 @@
       "Requirement already satisfied: urllib3==2.0.4 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (2.0.4)\n",
       "Requirement already satisfied: win32-setctime==1.1.0 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.1.0)\n",
       "Requirement already satisfied: yarl==1.9.2 in c:\\python311\\lib\\site-packages (from innovation-stk==0.0.1) (1.9.2)\n",
-      "\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Fridaplatform/SofttekLLMSDK.git 'C:\\Users\\joses\\AppData\\Local\\Temp\\pip-req-build-g6no52mk'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Fridaplatform/SofttekLLMSDK.git 'C:\\Users\\joses\\AppData\\Local\\Temp\\pip-req-build-0dprhy6c'\n"
      ]
     }
    ],
@@ -70,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python311\\Lib\\site-packages\\pinecone\\index.py:4: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from softtek_llm.chatbot import Chatbot\n",
@@ -166,7 +175,20 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InvalidPrompt",
+     "evalue": "The prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidPrompt\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\example.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m response \u001b[39m=\u001b[39m chatbot\u001b[39m.\u001b[39;49mchat(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mHello! My name is Jeff.\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     print_cache_score\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/joses/OneDrive/Escritorio/FaHacks/Hack16-E/SofttekLLMSDK-main/SofttekLLMSDK-main/example.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\joses\\OneDrive\\Escritorio\\FaHacks\\Hack16-E\\SofttekLLMSDK-main\\SofttekLLMSDK-main\\softtek_llm\\chatbot.py:207\u001b[0m, in \u001b[0;36mChatbot.chat\u001b[1;34m(self, prompt, print_cache_score, cache_kwargs)\u001b[0m\n\u001b[0;32m    199\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnon_valid_response:\n\u001b[0;32m    200\u001b[0m             \u001b[39mreturn\u001b[39;00m Response(\n\u001b[0;32m    201\u001b[0m                 message\u001b[39m=\u001b[39mMessage(role\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msystem\u001b[39m\u001b[39m\"\u001b[39m, content\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnon_valid_response),\n\u001b[0;32m    202\u001b[0m                 created\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m(datetime\u001b[39m.\u001b[39mutcnow()\u001b[39m.\u001b[39mtimestamp()),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    205\u001b[0m                 model\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mreviser\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    206\u001b[0m             )\n\u001b[1;32m--> 207\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidPrompt(\n\u001b[0;32m    208\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mThe prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    211\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmemory\u001b[39m.\u001b[39madd_message(role\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m, content\u001b[39m=\u001b[39mprompt)\n\u001b[0;32m    212\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcache:\n",
+      "\u001b[1;31mInvalidPrompt\u001b[0m: The prompt does not follow the rules set by the filters. If this behavior is not intended, consider modifying the filters. It is recommended to use LLMs for meta prompts."
+     ]
+    }
+   ],
    "source": [
     "response = chatbot.chat(\n",
     "    \"Hello! My name is Jeff.\",\n",
@@ -176,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
